# msvc-kit

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CHANGES.md  CODE_REVIEW.md  Cargo.toml  EXIT_CODE_CHECKLIST.md  EXIT_CODE_TESTS_SUMMARY.md  LICENSE  README.md  README_zh.md  TEST_EXIT_CODES.md  action.yml  justfile  release-please-config.json  renovate.json  run_exit_code_tests.ps1  vx.toml
.claude/: settings.local.json
.codebuddy/commands/: build.md  release.md  test.md
.codebuddy/skills/: msvc-kit-development.md
.github/workflows/: bundle-release.yml  bundle.yml  ci.yml  coverage.yml  docs.yml  pr-checks.yml  release-please.yml  release.yml  security-audit.yml  test-action.yml
docs/: exit-code-behavior.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/api/: download-options.md  install-info.md  library.md  msvc-environment.md  query-result.md  tool-paths.md
docs/dcc/: 3dsmax.md  blender.md  houdini.md  maya.md  overview.md  unreal-engine.md
docs/examples/: basic.md  build-script.md  custom-paths.md  quick-compile.md
docs/guide/: architecture.md  caching.md  ci-cd.md  cli-config.md  cli-download.md  cli-list-clean.md  cli-query.md  cli-setup.md  getting-started.md  github-action.md  installation.md  performance.md  what-is-msvc-kit.md
docs/zh/: index.md
docs/zh/api/: download-options.md  install-info.md  library.md  msvc-environment.md  query-result.md  tool-paths.md
docs/zh/guide/: architecture.md  cli-config.md  cli-download.md  cli-query.md  getting-started.md  github-action.md  installation.md  performance.md
pkg/winget/: loonghao.msvc-kit.yaml  msvc-kit.yaml
src/: constants.rs  error.rs  lib.rs
src/bundle/: layout.rs  mod.rs  scripts.rs
src/config/: mod.rs
src/downloader/: cache.rs  common.rs  common_tests.rs  hash.rs  http.rs  index.rs  manifest.rs  mod.rs  msvc.rs  progress.rs  sdk.rs  traits.rs
src/env/: mod.rs  setup.rs
src/installer/: extractor.rs  mod.rs
src/query/: mod.rs
src/scripts/: mod.rs
src/version/: mod.rs
templates/: readme.txt  setup.bat.txt  setup.ps1.txt  setup.sh.txt
tests/: README.md  bundle_tests.rs  cli_exit_code_tests.rs  config_tests.rs  downloader_tests.rs  e2e_tests.rs  env_tests.rs  integration_test.rs  query_tests.rs  reexports_tests.rs  unit_tests.rs  update_tests.rs  version_tests.rs
